# llm-trainer

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
slm_trainer/: __init__.py  data_preparation.py  generator.py  main.py  tokenizer.py  trainer.py
slm_trainer/generation/: __init__.py  generate.py
slm_trainer/training/: __init__.py  callbacks.py  losses.py  model.py
slm_trainer/transformers/: __init__.py  layers.py
tests/: __init__.py  test_data_preparation.py  test_generator.py  test_tokenizer.py  test_trainer.py
