[project]
name = "slm-trainer"
version = "0.1.0"
description = "A Python package for training and using small language models"
readme = "README.md"
requires-python = ">= 3.10"
license = {text = "Apache-2.0"}

classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "tensorflow>=2.15.0",
    "keras>=3.10.0",
    "pandas>=2.2.2",
    "numpy>=2.0.2",
    "jax>=0.7.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pylint>=2.6.0",
]

[project.urls]
repository = "https://github.com/your-username/slm-trainer"
documentation = "https://github.com/your-username/slm-trainer#readme"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["slm_trainer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

